feat：添加win的javafx sdk说明